--- a/index.html
+++ b/index.html
@@ -341,6 +341,53 @@ canvas#fog {
 #boss-top-bar .hp-bar-fill{ background: linear-gradient(90deg,#ff4d4d 0%, #6b0000 100%); height:100%; transition:width 260ms ease; box-shadow:0 6px 24px rgba(255,0,0,0.06) inset; }
 #boss-top-bar .hp-bar-text{ font-weight:800; color:#ffdede; font-size:0.9rem; margin-left:8px; }
 
+/* ===============================
+   RESPONSIVE ADJUSTMENTS
+   Improve layout and touch targets for tablets/phones
+================================ */
+@media (max-width:900px) {
+  .eclipse { width:260px; height:260px; }
+  .card { padding:16px; }
+  .card-title { font-size:1.2em; }
+  #game-ui { max-width:96vw; padding:16px; }
+  .lobby-grid { gap:14px; }
+}
+
+@media (max-width:600px) {
+  html, body { overflow: auto; -webkit-overflow-scrolling: touch; }
+  canvas#fog { display: none; }
+  .scanlines { display: none; }
+  .eclipse { width:180px; height:180px; }
+  .vignette { opacity:0.9; }
+
+  /* make the game UI flow naturally on small screens instead of fixed-centered overlay */
+  #game-ui.centered-ui {
+    position: relative !important;
+    left: auto !important;
+    top: auto !important;
+    transform: none !important;
+    width: 96vw !important;
+    margin: 12px auto !important;
+    padding: 14px !important;
+    border-radius: 12px !important;
+  }
+
+  #game-ui { padding:12px; }
+  #question-text { font-size:1rem; }
+  #answerButtons, #choices { display:flex; flex-direction:column; gap:10px; }
+  #answerButtons button, .choice-btn, .btn { width:100%; min-height:48px; font-size:1rem; border-radius:10px; }
+
+  /* make lobby cards stack vertically and stretch */
+  .lobby-grid { flex-direction:column; align-items:stretch; padding:12px; }
+  .mode-card { min-width:unset; width:100%; }
+
+  /* ensure character images scale */
+  .character img { width:72px; height:72px; }
+
+  /* boss top bar should not cover content on small screens */
+  #boss-top-bar { top:8px; left:50%; transform:translateX(-50%); }
+}
+
 </style>
 </head>
 
