--- a/index.html
+++ b/index.html
@@ -360,7 +360,12 @@ canvas#fog {
 
 /* Boss top bar */
 #boss-top-bar{ position:fixed; top:14px; left:50%; transform:translateX(-50%); z-index:60; width:min(92%,1100px); display:none; }
-#boss-top-bar .hp-bar{ background: linear-gradient(180deg, rgba(60,0,0,0.45), rgba(10,0,0,0.45)); border-radius:10px; border:1px solid rgba(255,40,40,0.12); }
+/* Phase tick markers — show vertical ticks on the boss HP bar indicating thresholds
+  where the next phase will begin (75%, 50%, 25%). */
+#boss-top-bar .phase-ticks{ position:absolute; inset:0; z-index:3; pointer-events:none; }
+#boss-top-bar .phase-ticks .tick{ position:absolute; top:-6px; bottom:-6px; width:2px; background:rgba(255,255,255,0.08); transform:translateX(-50%); transition:background 200ms, box-shadow 200ms, height 220ms; }
+#boss-top-bar .phase-ticks .tick.passed{ background:var(--accent); box-shadow:0 0 12px rgba(255,82,82,0.45); height:120%; top:-12px; }
+#boss-top-bar .hp-bar{ background: linear-gradient(180deg, rgba(60,0,0,0.45), rgba(10,0,0,0.45)); border-radius:10px; border:1px solid rgba(255,40,40,0.12); position:relative; }
 #boss-top-bar .hp-bar-fill{ background: linear-gradient(90deg,#ff4d4d 0%, #6b0000 100%); height:100%; transition:width 260ms ease; box-shadow:0 6px 24px rgba(255,0,0,0.06) inset; }
 #boss-top-bar .hp-bar-text{ font-weight:800; color:#ffdede; font-size:0.9rem; margin-left:8px; }
 
@@ -444,12 +449,13 @@ canvas#fog {
 <div class="vignette"></div>
 <div class="scanlines"></div>
 <!-- Large Boss HP bar (visible in Boss Mode) -->
-<div id="boss-top-bar" style="display:none;">
-  <div class="card" style="padding:10px 14px; max-width:1100px; margin:0 auto; background: linear-gradient(90deg, rgba(40,0,0,0.95), rgba(10,0,0,0.9)); border-radius:12px;">
+<div id="boss-top-bar" style="display:none;" data-phase="0">
+  <div class="card" style="padding:10px 14px; max-width:1100px; margin:0 auto; background: linear-gradient(90deg, rgba(40,0,0,0.95), rgba(10,0,0,0.9)); border-radius:12px; position:relative;">
     <div style="display:flex; align-items:center; gap:14px;">
       <div style="font-weight:900; color:#ffb3b3; min-width:56px;">BOSS</div>
-      <div style="flex:1">
+      <div style="flex:1; position:relative;">
         <div class="hp-bar" data-max="37000" style="height:22px;">
+          <div class="phase-ticks" aria-hidden="true"></div>
           <div class="hp-bar-fill" style="width:100%"></div>
           <div class="hp-bar-text">37000 / 37000</div>
         </div>
